<resources>
    <string name="app_name">PicGame</string>
    <string name="how_to_play">How to Play</string>
    <string name="what_is_it">What is it?</string>
    <string name="start_game">Start Game</string>
    <string name="what_is_the_pic">What is this picture?</string>
    <string name="already_is_first">Already is first</string>
    <string name="no_next">No next</string>
    <string name="skip_act">Skip Activity</string>
    <string name="find">Find the</string>
    <string name="not_quite">Not quite</string>
    <string name="that_is_right">That is right</string>
    <string name="match_pic">Match the picture</string>
    <string name="good_job">Good job !</string>
    <string name="try_again">Try again !</string>
    <string name="put_same">Put with Same</string>
    <string name="sort_pic">Sort the pictures</string>
    <string name="pic_identify">Picture Identification</string>
    <string name="identical_match">Identical Matching</string>
    <string name="similar_match">Similar Matching</string>
    <string name="sort">Sorting</string>
    <string name="expressive_label">Expressive Labeling</string>
    <string name="receptive_label">Receptive Labeling</string>
    <string name="apple">apple</string>
    <string name="cookies">cookies</string>
    <string name="cat">cat</string>
    <string name="bird">bird</string>
    <string name="airplane">airplane</string>
    <string name="car">car</string>
    <string name="shoe">shoe</string>
    <string name="candy">candy</string>
    <string name="chair">chair</string>
    <string name="bed">bed</string>
    <string name="bike">bike</string>
    <string name="ball">ball</string>
    <string name="cup">cup</string>
    <string name="spoon">spoon</string>
    <string name="flower">flower</string>
    <string name="fail_o">ouch</string>
    <string name="settings">settings</string>
    <string name="max_number">Max number is</string>
    <string name="min_number">Min number is</string>
    <string name="pic_number">Picture number</string>
    <string name="no_settings">No settings</string>
    <string name="error_repeat_number">Error repeat number</string>
    <string name="choose_pic">Choose Game pictures</string>
    <string name="choose_pic_type">选择图片的种类</string>
</resources>
