<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_drawer_setting"
        app:showAsAction="always" />

    <item
        android:id="@+id/pic_identify"
        android:title="@string/pic_identify" />
    <item
        android:id="@+id/expressive_label"
        android:title="@string/expressive_label" />
    <item
        android:id="@+id/identical_match"
        android:title="@string/identical_match" />
    <item
        android:id="@+id/similar_match"
        android:title="@string/similar_match" />
    <item
        android:id="@+id/sort"
        android:title="@string/sort" />
    <item
        android:id="@+id/receptive_label"
        android:title="@string/receptive_label" />
</menu>