<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/dp_30"
    android:layout_marginRight="@dimen/dp_30"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:gravity="center_horizontal"
        android:padding="@dimen/dp_6"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_title"
        android:text="@string/how_to_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"/>

    <Button
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/btn"
        android:text="@string/what_is_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120">

        <ImageView
            android:id="@+id/iv"
            android:src="@drawable/arrow_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_60"
        android:id="@+id/btn_start_game"
        android:text="@string/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>